# PythonLearning

./: .gitignore
session1/: pyproject.toml
session1/src/crawler/: dockerfile  main.py  scratch.py
