[tool.poetry]
name = "session1"
version = "0.1.0"
description = "Python Learning"
authors = ["Mike Rousos <Mike@MJRousos.com>"]

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
